welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: value unary_! is not a member of Int
while (!n!=4) {
       ^