welcome.lessons.welcome.variables.RunFour.scala.code
var n=0
while (!n!=4) {
	if(!estSurBiscuit()) {
		avance();
	}
	if(estSurBiscuit()) {
		n=n+1;
		avance();
	}
}

